# m4opt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AbstractConstraints.py  CHANGES.rst  CITATION.cff  ConstraintManager.py  Constraint_manager.py  GeneralConstraints.py  GroundConstraints.py  MANIFEST.in  OrbitingConstraints.py  README.rst  pyproject.toml  sampleCodeAdding.py  sampleCodeChaining.py  setup.cfg  setup.py  tox.ini
.github/actions/install_cplex/: action.yml  cplex.expect
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml  codeql-analysis.yml  publish.yml
docs/: class_organization.rst  conf.py  constraints.rst  fov.rst  index.rst  install.rst  models.rst  npr7150.rst  orbit.rst  refs.bib  related.rst  requirements.rst  risk_assessment.rst  skygrid.rst  solvers.rst
docs/_static/: example.ecsv
docs/_static/css/: risk_table.css
docs/design/: index.rst  milp.rst
docs/dev/: contributing.rst  index.rst  npr7150.rst  related.rst  risk_assessment.rst  testing.rst
docs/guide/: cli.rst  constraints.rst  dynamics.rst  fov.rst  index.rst  milp.rst  misc.rst  missions.rst  models.rst  observer.rst  orbit.rst  skygrid.rst  synphot.rst  utils.rst
docs/install/: cplex.rst  deploy.rst  gurobi.rst  index.rst
docs/m4opt/: index.rst
docs/reference/: tests.rst
docs/scenarios/: dorado.rst  index.rst  lsst.rst  sedmachine.rst  ztf.rst
licenses/: LICENSE.rst  README.rst  synphot_LICENSE.rst
m4opt/: __init__.py  _astropy_init.py  _cli.py  _roll.py  _slew.py  _tui.py  conftest.py  cplex.py  gurobi.py  milp.py  observer.py
m4opt/Model/: Model_pyomo.py
m4opt/Objects/: Background.py  Bandpass.py  Instrument.py  PhotonCounting.py  PhotonSource.py
m4opt/_cli/: __init__.py  animate.py  core.py  depth_map.py  prime.py  schedule.py
m4opt/_cli/tests/: conftest.py  test_core.py  test_end_to_end.py  test_prefilter.py  test_schedule.py
m4opt/_cli/tests/data/: 800.fits
m4opt/_milp/: __init__.py  _base.py  _cplex.py  _gurobi.py  conftest.py
m4opt/constraints/: __init__.py  _airmass.py  _altitude.py  _atnight.py  _body_separation.py  _core.py  _earth_limb.py  _galactic.py  _logical.py  _positional.py  _radiation.py  body_separation.py  core.py  earth_limb.py  objectives.py  sun_separation.py
m4opt/constraints/tests/: conftest.py  test_body_separation.py  test_earth_limb.py  test_galactic.py  test_positional.py  test_sun_separation.py
m4opt/data/: leinert_zodi.txt  nuv_d_cbe_effective_area.ecsv
m4opt/dynamics/: __init__.py  _roll.py  _slew.py
m4opt/dynamics/tests/: test_roll.py  test_slew.py
m4opt/fov/: __init__.py  _core.py  core.py
m4opt/fov/tests/: test_bounding_radius.py
m4opt/missions/: __init__.py  _core.py  _lsst.py  _ultrasat.py  _uvex.py
m4opt/missions/_lsst/: __init__.py  _camera.py  camera.py  lsst_camera.py
m4opt/missions/_lsst/data/: README.rst  detector_extractor.py  lsstCamSim.yaml  lsst_science_detectors.csv
m4opt/missions/_rubin/: __init__.py
m4opt/missions/_rubin/tests/: test_detector.py
m4opt/missions/_ultrasat/: __init__.py  camera.py
m4opt/missions/_ultrasat/data/: AllSS_grid_361.txt  LCS_nonoverlapping_grid.csv  README.rst
m4opt/missions/_ultrasat/tests/: test_detector.py
m4opt/missions/_ztf/: __init__.py
m4opt/missions/_ztf/data/: LICENSE.txt  README.rst
m4opt/missions/_ztf/tests/: test_detector.py
m4opt/missions/tests/: test_detector.py  test_uvex.py
m4opt/models/: __init__.py  _bandpass.py  _core.py  _detector.py  _extinction.py  _extrinsic.py  _math.py  bandpass.py  core.py  extinction.py  math.py  state.py
m4opt/models/airmass/: __init__.py  airmass.py  core.py
m4opt/models/airmass/data/: README.md
m4opt/models/background/: __init__.py  _core.py  _galactic.py  core.py  skybright.py  zodiacal.py
m4opt/models/background/_skybright/: __init__.py
m4opt/models/background/_skybright/data/: 10FebZen.txt  10Tuc.txt
m4opt/models/background/_zodiacal/: __init__.py
m4opt/models/background/_zodiacal/data/: leinert_zodi.txt
m4opt/models/background/data/: 10JunZen.txt  10Nog.txt  10Nwh.txt  README.rst
m4opt/models/background/skybright/: __init__.py
m4opt/models/background/skybright/data/: 10Phx.txt
m4opt/models/background/zodiacal/: __init__.py
m4opt/models/bandpass/: __init__.py  bandpass.py  core.py
m4opt/models/extinction/: __init__.py  airmass.py  core.py
m4opt/models/extinction/tests/: test_extinction.py
m4opt/models/tests/: test_detector.py  test_extinction.py
m4opt/observer/: __init__.py  _core.py  _earth_fixed.py  _spice.py  _tle.py
m4opt/orbit/: __init__.py  _core.py  _earth_fixed.py  _spice.py  _tle.py  base.py  spice.py  tle.py
m4opt/sensitivity/: bandpass.py  photon_counting.py  photon_source.py
m4opt/skygrid/: __init__.py  _geodesic.py  _healpix.py  _sinusoidal.py  _spiral.py
m4opt/skygrid/tests/: test_geodesic.py  test_skygrid.py
m4opt/synphot/: __init__.py  _bandpass.py  _detector.py  _extinction.py  _extrinsic.py  _math.py
m4opt/synphot/background/: __init__.py  _core.py  _galactic.py
m4opt/synphot/background/_cerenkov/: __init__.py  _electron_loss.py  _refraction_index.py
m4opt/synphot/background/_earthshine/: __init__.py
m4opt/synphot/background/_skybright/: __init__.py
m4opt/synphot/background/_zodiacal/: __init__.py
m4opt/synphot/extinction/: __init__.py  _atmosphere.py  _dust.py
m4opt/synphot/extinction/tests/: test_dust.py
m4opt/synphot/tests/: test_detector.py  test_extinction.py
m4opt/tests/: __init__.py  test_cerenkov.py  test_cplex.py  test_gurobi.py  test_milp.py  test_roll.py
m4opt/tests/cerenkov_test/: test_cerenkov.py
m4opt/tests/cerenkov_test/data/: Cerenkov_output.xml  README.rst
m4opt/tests/plugins/: problem_size_limits.py
m4opt/utils/: console.py  functional.py  interp.py  numpy.py  optimization.py  resource.py  sympy.py  typing_extensions.py
m4opt/utils/dynamics/: __init__.py  _roll.py  _slew.py
m4opt/utils/dynamics/tests/: test_roll.py
m4opt/utils/pybtex/styles/: short_alpha.py
m4opt/utils/tests/: conftest.py  test_console.py  test_interp.py  test_optimization.py  test_pybtex.py
(+18 files in other folders)
