[project]
name = "m4opt"
dynamic = ["version"]
authors = [{name = "M4OPT Developers", email = "leo.singer@ligo.org"}]
license = "BSD-3-Clause"
description = "Multi-Mission Multi-Messenger Observation Planning Toolkit"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "aep8",
    "antiprism-python",
    "astropy >= 7.1.0",
    "astropy-healpix",
    "astroquery",
    "click >= 8.2.0",  # https://github.com/pallets/click/pull/2829
    "cplex",
    "docplex",
    "dust-extinction",
    "dustmaps",
    "ligo.skymap >= 2.4.0",
    "networkx",
    "numpy >= 2.1.0",
    "regions",
    "pymetis",
    "satellitetle",
    "scipy",
    "sgp4",
    "spiceypy",
    "sympy",
    "synphot",
    "typer >= 0.16.0",
    "typing_extensions; python_version < \"3.12\"",
    "xdg-base-dirs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "astroplan",
    "networkx",
    "pybtex",
    "pytest-astropy",
]
docs = [
    "pysiaf",
    "sphinx-astropy[confv2]",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-typer",
]

[project.urls]
Homepage = "https://m4opt.readthedocs.io/"
"Bug Tracker" = "https://github.com/m4opt/m4opt/issues"
"Change Log" = "https://m4opt.readthedocs.io/en/latest/changes.html"
"Documentation" = "https://m4opt.readthedocs.io/"
"GitHub" = "https://github.com/m4opt/m4opt"

[project.scripts]
m4opt = "m4opt._cli:app"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
"*" = [
    "py.typed",
    "*.txt",
    "*.ecsv",
]

[tool.pytest.ini_options]
testpaths = [
    "m4opt",
    "docs",
]
norecursedirs = [
    "_build",
]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
addopts = [
    "--doctest-rst",
    "--ignore=docs/_build",
]
doctest_optionflags = [
    "FLOAT_CMP",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.coverage.run]
omit = [
    "m4opt/*setup_package*",
    "m4opt/extern/*",
    "m4opt/_version*",
    "*/m4opt/*setup_package*",
    "*/m4opt/extern/*",
    "*/m4opt/_version*",
]

[tool.coverage.report]
exclude_also = [
    # Don't complain about packages we have installed
    "except ImportError",
    # Don't complain if tests don't hit assertions
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about script hooks
    "def main\\(.*\\):",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "m4opt/_version.py"

[tool.mypy]
exclude = ["^docs/"]
ignore_missing_imports = true

[tool.codespell]
ignore-words-list = """
    aas,
    sav,
    ser,
    ToO,
    ToOs,
"""
