[metadata]
name = m4opt
author = M4OPT Developers
author_email = leo.p.singer@nasa.gov
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://m4opt.readthedocs.io/
description = Multi-Mission Multi-Messenger Observation Planning Toolkit
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = m4opt/m4opt

[options]
zip_safe = False
packages = find:
# cplex not yet released for Python 3.10
python_requires = >=3.7, <3.10
setup_requires = setuptools_scm
install_requires =
    astropy >= 4
    cplex
    docplex
    gurobipy
    synphot  # FIXME: remove, we're using plain old Astropy models

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
m4opt = data/*

[tool:pytest]
testpaths = "m4opt" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    m4opt/_astropy_init*
    m4opt/conftest.py
    m4opt/*setup_package*
    m4opt/tests/*
    m4opt/*/tests/*
    m4opt/extern/*
    m4opt/version*
    */m4opt/_astropy_init*
    */m4opt/conftest.py
    */m4opt/*setup_package*
    */m4opt/tests/*
    */m4opt/*/tests/*
    */m4opt/extern/*
    */m4opt/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
